--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 
                 <Div class="Sec1-Tex1">Faça já sua reserva. Um jantar que cabe no seu bolso.</Div>
                 <Div class="Sec1-Tex2">Aqui a comida é feita com amor, seja para quem for.</Div>
-                <a href= "P2.HTML"><button class="Botao">Reservas</button></a>
+                <a href= "P2.html"><button class="Botao">Reservas</button></a>
                 <div class ="Sec1-Tex3"></div>
             </section>
  
